--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 PORT=5001
-MONGODB_URI=mongodb://127.0.0.1:27017/
+MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/
 
+
+# CORS Configuration (Add your frontend URLs here)
+CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app/
+
+# PORT=5001
+# MONGODB_URI=mongodb://127.0.0.1:27017/
 
