--- a/.env
+++ b/.env
@@ -1,6 +1,22 @@
 
 
+# PORT=5001
+# MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/motorcycle
+# CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app
+# JWT_SECRET=your_secret_key_here
+
+
+
+
+
+# Port for the backend server
 PORT=5001
+
+# MongoDB connection string
 MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/motorcycle
+
+# CORS allowed origins (both local development and production)
 CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app
+
+# JWT secret key for signing tokens
 JWT_SECRET=your_secret_key_here
