--- a/.env
+++ b/.env
@@ -9,14 +9,24 @@
 
 
 
-# Port for the backend server
+# # Port for the backend server
+# PORT=5001
+
+# # MongoDB connection string
+# MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/motorcycle
+
+# # CORS allowed origins (both local development and production)
+# CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app
+
+# # JWT secret key for signing tokens
+# JWT_SECRET=your_secret_key_here
+
+
+
+
+
 PORT=5001
-
-# MongoDB connection string
 MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/motorcycle
+CORS_ORIGIN=https://motorcycle-frondend.vercel.app,http://localhost:5173
+JWT_SECRET=your_jwt_secret_key
 
-# CORS allowed origins (both local development and production)
-CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app
-
-# JWT secret key for signing tokens
-JWT_SECRET=your_secret_key_here
