--- a/.env
+++ b/.env
@@ -27,6 +27,10 @@
 
 PORT=5001
 MONGODB_URI=mongodb+srv://matheshwaran:Guvi1234@cluster0.nat1pbt.mongodb.net/motorcycle
-CORS_ORIGIN=https://motorcycle-frondend.vercel.app,http://localhost:5173
+# CORS_ORIGIN=https://motorcycle-frondend.vercel.app,http://localhost:5173
+CORS_ORIGIN=http://localhost:5173,https://motorcycle-frondend.vercel.app
+
+# JWT_SECRET=your_jwt_secret_key
 JWT_SECRET=your_jwt_secret_key
+
 
